--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
-#number {
+#numero-cpu, #numero-utente{
+    margin-top: 20px;
     height: 50px;
-    border: 1px dashed red;
+    width: 100px;
+    background-color: blue;
+    color:white;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+#winner {
+    height: 100px;
+    width: 500px;
+    background-color: blue;
+    color: white;
+    font-size: 2rem;
+    font-weight: 600;
+    
 }
